force-app/main/default/objects/SeasonReachedAchievement__c/SeasonReachedAchievement__c.object-meta.xml
<CustomObject>
    <label>Season Reached Achievement</label>
    <nameField>
        <displayFormat>RA{0000000}</displayFormat>
        <label>Season Reached Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Season Reached Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>