force-app/main/default/objects/SeasonReachedAchievement__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <referenceTo>Achievement__c</referenceTo>
    <relationshipLabel>Season Reached Achievements</relationshipLabel>
    <relationshipName>SeasonReachedAchievements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>