force-app/main/default/objects/SeasonReachedAchievement__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>SeasonReachedAchievements</relationshipLabel>
    <relationshipName>SeasonReachedAchievements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>